cleaning the project and adding a models and database

--- a/ContactManagerAPI.csproj
+++ b/ContactManagerAPI.csproj
@@ -21,6 +21,8 @@
 
   <ItemGroup>
     <Folder Include="Controllers\" />
+    <Folder Include="AppDataFile\" />
+    <Folder Include="DAL\Repositories\" />
   </ItemGroup>
 
 </Project>
