Creating and adding CRUD operations for Category model

--- a/ContactManagerAPI.csproj
+++ b/ContactManagerAPI.csproj
@@ -20,9 +20,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
     <Folder Include="AppDataFile\" />
-    <Folder Include="DAL\Repositories\" />
+    <Folder Include="DAL\Repositories\ContactRepository\" />
+    <Folder Include="DTO\Contact\" />
   </ItemGroup>
 
 </Project>
